Add the most trivial UI possible
Renders the namespaces in the cluster as an unordered list

--- a/node-app/templates/deployment.yaml
+++ b/node-app/templates/deployment.yaml
@@ -46,6 +46,25 @@ spec:
               port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+        - name: {{ .Chart.Name }}-ui
+          securityContext:
+            {{- toYaml .Values.securityContext | nindent 12 }}
+          image: "{{ .Values.uiImage.repository }}:{{ .Chart.AppVersion }}"
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          ports:
+            - name: http-ui
+              containerPort: 80
+              protocol: TCP
+          livenessProbe:
+            httpGet:
+              path: /ui/index.html
+              port: http-ui
+          readinessProbe:
+            httpGet:
+              path: /ui/index.html
+              port: http-ui
+          resources:
+            {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
