--- a/ui/package.json
+++ b/ui/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "config": "3.2.5",
+    "muicss": "0.10.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-redux": "7.1.3",
