Convert to using nextjs instead of parcel
Needed to get ready for real routing

--- a/ui/.dockerignore
+++ b/ui/.dockerignore
@@ -1,12 +1,11 @@
 *
 
 !src
+!pages
 
 !.babelrc
 !.eslintrc.js
-!.nvmrc
 !package.json
 !package-lock.json
-!index.js
-!index.html
 !nginx.conf
+!next.config.js
