--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -2,6 +2,7 @@ FROM node:12.18.2-alpine as builder
 
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
+ENV CI=true
 
 COPY . .
 
@@ -9,7 +10,7 @@ RUN apk --no-cache --virtual build-dependencies add \
     python \
     make \
     g++ \
-    && npm i --no-optional --no-cache \
+    && npm ci --no-optional --no-cache \
     && npm run build \
     && apk del build-dependencies
 
@@ -20,6 +21,6 @@ FROM nginx:1.17.8-alpine
 RUN mkdir -p /var/www/ui
 WORKDIR /var/www/ui
 
-COPY --from=builder /usr/src/app/dist .
+COPY --from=builder /usr/src/app/out .
 
 COPY --from=builder /usr/src/app/nginx.conf /etc/nginx/conf.d/default.conf
