--- a/ui/package.json
+++ b/ui/package.json
@@ -4,14 +4,15 @@
   "description": "the ui of topokube",
   "main": "index.js",
   "scripts": {
-    "start": "parcel index.html",
-    "build": "parcel build --no-cache --public-url=/ui index.html"
+    "start": "next start",
+    "build": "next build && next export"
   },
   "author": "zach pratt <zach@modzed.io>",
   "license": "MIT",
   "dependencies": {
     "config": "3.2.5",
     "muicss": "0.10.1",
+    "next": "9.4.4",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-redux": "7.1.3",
@@ -21,7 +22,6 @@
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
-    "@babel/preset-react": "^7.8.3",
-    "parcel-bundler": "^1.12.4"
+    "@babel/preset-react": "^7.8.3"
   }
 }
