--- a/node-app/values.yaml
+++ b/node-app/values.yaml
@@ -42,10 +42,15 @@ ingress:
   enabled: true
   annotations:
      kubernetes.io/ingress.class: nginx
+     nginx.ingress.kubernetes.io/ssl-passthrough: "true"
+     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+  tls:
+    - hosts:
+      - topokube.local
   hosts:
     - host: topokube.local
       pathsApi:
-        - /api
+        - /
       pathsUI:
         - /ui
 
