--- a/helmfile.yaml
+++ b/helmfile.yaml
@@ -1,8 +1,8 @@
 repositories:
   - name: stable
-    url: https://kubernetes-charts.storage.googleapis.com/
+    url: https://charts.helm.sh/stable
   - name: incubator
-    url: https://kubernetes-charts-incubator.storage.googleapis.com/
+    url: https://charts.helm.sh/incubator
 releases:
   - name: namespaces
     chart: incubator/raw
