--- a/ui/nginx.conf
+++ b/ui/nginx.conf
@@ -1,12 +1,16 @@
 server {
     listen 80;
+    listen 443 ssl;
     server_name _;
+    ssl_certificate /certificates/tlsCert;
+    ssl_certificate_key /certificates/tlsKey;
 
-    root /var/www/;
-    index index.html;
+    root /var/www/ui/;
+    include /etc/nginx/mime.types;
 
     location /ui {
+        alias /var/www/ui/;
         index index.html;
-        try_files $uri /index.html;
+        try_files $uri $uri/ index.html;
     }
 }
