chore: simplify creation of namespaces

--- a/helmfile.yaml
+++ b/helmfile.yaml
@@ -1,28 +1,11 @@
 repositories:
   - name: stable
     url: https://charts.helm.sh/stable
-  - name: incubator
-    url: https://charts.helm.sh/incubator
 releases:
-  - name: namespaces
-    chart: incubator/raw
-    values:
-      - resources:
-          - apiVersion: v1
-            kind: Namespace
-            metadata:
-              name: nginx
-            spec: {}
-          - apiVersion: v1
-            kind: Namespace
-            metadata:
-              name: topokube
-            spec: {}
   - name: nginx-ingress
     namespace: nginx
     chart: stable/nginx-ingress
-    needs:
-      - namespaces
+    createNamespace: true
     set:
       - name: controller.kind
         value: DaemonSet
@@ -35,8 +18,8 @@ releases:
   - name: topokube
     namespace: topokube
     chart: ./node-app
-    needs:
-      - namespaces
     values:
       - "./node-app/values.yaml"
     wait: true
+    waitForJobs: true
+    createNamespace: true
