--- a/node-app/templates/tests/test-connection.yaml
+++ b/node-app/templates/tests/test-connection.yaml
@@ -5,11 +5,11 @@ metadata:
   labels:
 {{ include "node-app.labels" . | nindent 4 }}
   annotations:
-    "helm.sh/hook": test-success
+    "helm.sh/hook": test
 spec:
   containers:
-    - name: wget
-      image: busybox
-      command: ['wget']
-      args:  ['{{ include "node-app.fullname" . }}:{{ .Values.service.port }}']
+    - name: conn-test
+      image: alpine/k8s:1.20.7
+      command: ['curl']
+      args:  ['-k', 'https://{{ include "node-app.fullname" . }}:{{ .Values.service.port }}/health']
   restartPolicy: Never
