--- a/node-app/templates/deployment.yaml
+++ b/node-app/templates/deployment.yaml
@@ -11,6 +11,8 @@ spec:
       {{- include "node-app.selectorLabels" . | nindent 6 }}
   template:
     metadata:
+      annotations:
+        checksum/webhook: {{ include (print $.Template.BasePath "/webhook.yaml") . | sha256sum }}
       labels:
         {{- include "node-app.selectorLabels" . | nindent 8 }}
     spec:
