chore: move chart to charts directory
following conventions from other projects like nginx-ingress

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -39,5 +39,5 @@ jobs:
         run: docker build . --file Dockerfile --tag koozie:${{ github.sha }}
       - name: lint helm chart
         run: |
-          cd node-app
+          cd ./charts/node-app
           helm lint
