--- a/charts/node-app/templates/service-ui.yaml
+++ b/charts/node-app/templates/service-ui.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "node-app.fullname" . }}-ui
+  name: {{ include "koozie-exporter.fullname" . }}-ui
   labels:
-    {{- include "node-app.labels" . | nindent 4 }}
+    {{- include "koozie-exporter.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http-ui
   selector:
-    {{- include "node-app.selectorLabels" . | nindent 4 }}
+    {{- include "koozie-exporter.selectorLabels" . | nindent 4 }}
