--- a/charts/node-app/templates/serviceaccount.yaml
+++ b/charts/node-app/templates/serviceaccount.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "node-app.serviceAccountName" . }}
+  name: {{ include "koozie-exporter.serviceAccountName" . }}
   labels:
-{{ include "node-app.labels" . | nindent 4 }}
+{{ include "koozie-exporter.labels" . | nindent 4 }}
 {{- end -}}
