--- a/charts/node-app/templates/tests/test-connection.yaml
+++ b/charts/node-app/templates/tests/test-connection.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "node-app.fullname" . }}-test-connection"
+  name: "{{ include "koozie-exporter.fullname" . }}-test-connection"
   labels:
-{{ include "node-app.labels" . | nindent 4 }}
+{{ include "koozie-exporter.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": test
 spec:
@@ -11,5 +11,5 @@ spec:
     - name: conn-test
       image: alpine/k8s:1.20.7
       command: ['curl']
-      args:  ['-k', 'https://{{ include "node-app.fullname" . }}:{{ .Values.service.port }}/health']
+      args:  ['-k', 'https://{{ include "koozie-exporter.fullname" . }}:{{ .Values.service.port }}/health']
   restartPolicy: Never
