--- a/charts/node-app/values.yaml
+++ b/charts/node-app/values.yaml
@@ -1,4 +1,4 @@
-# Default values for node-app.
+# Default values for koozie-exporter.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
