chore: rename chart directory from node-app to koozie-exporter

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -39,5 +39,5 @@ jobs:
         run: docker build . --file Dockerfile --tag koozie:${{ github.sha }}
       - name: lint helm chart
         run: |
-          cd ./charts/node-app
+          cd ./charts/koozie-exporter
           helm lint
