chore: refactor to use latest `helm create` conventions

--- a/charts/koozie-exporter/templates/deployment.yaml
+++ b/charts/koozie-exporter/templates/deployment.yaml
@@ -5,14 +5,19 @@ metadata:
   labels:
     {{- include "koozie-exporter.labels" . | nindent 4 }}
 spec:
+  {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
+  {{- end }}
   selector:
     matchLabels:
       {{- include "koozie-exporter.selectorLabels" . | nindent 6 }}
   template:
     metadata:
+      {{- with .Values.podAnnotations }}
       annotations:
         checksum/webhook: {{ include (print $.Template.BasePath "/webhook.yaml") . | sha256sum }}
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       labels:
         {{- include "koozie-exporter.selectorLabels" . | nindent 8 }}
     spec:
