--- a/charts/koozie-exporter/templates/serviceaccount.yaml
+++ b/charts/koozie-exporter/templates/serviceaccount.yaml
@@ -4,5 +4,10 @@ kind: ServiceAccount
 metadata:
   name: {{ include "koozie-exporter.serviceAccountName" . }}
   labels:
-{{ include "koozie-exporter.labels" . | nindent 4 }}
-{{- end -}}
+    {{- include "koozie-exporter.labels" . | nindent 4 }}
+  {{- with .Values.serviceAccount.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+{{- end }}
+
