--- a/charts/koozie-exporter/values.yaml
+++ b/charts/koozie-exporter/values.yaml
@@ -7,6 +7,7 @@ replicaCount: 1
 image:
   repository: topokube
   pullPolicy: Never
+  tag: ""
 
 uiImage:
   repository: topokube-ui
@@ -19,9 +20,13 @@ fullnameOverride: ""
 serviceAccount:
   # Specifies whether a service account should be created
   create: true
+  # Annotations to add to the service account
+  annotations: {}
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
-  name:
+  name: ""
+
+podAnnotations: {}
 
 podSecurityContext: {}
   # fsGroup: 2000
@@ -30,9 +35,9 @@ securityContext: {}
   # capabilities:
   #   drop:
   #   - ALL
-#  readOnlyRootFilesystem: true
-#  runAsNonRoot: true
-#  runAsUser: 1000
+  # readOnlyRootFilesystem: true
+  # runAsNonRoot: true
+  # runAsUser: 1000
 
 service:
   type: ClusterIP
@@ -40,6 +45,7 @@ service:
 
 ingress:
   enabled: true
+  className: ""
   annotations:
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/ssl-passthrough: "true"
@@ -50,9 +56,11 @@ ingress:
   hosts:
     - host: topokube.local
       pathsApi:
-        - /
+        - path: /
+          pathType: ImplementationSpecific
       pathsUI:
-        - /ui
+        - path: /ui
+          pathType: ImplementationSpecific
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
@@ -65,6 +73,13 @@ resources: {}
   # requests:
   #   cpu: 100m
   #   memory: 128Mi
+
+autoscaling:
+  enabled: false
+  minReplicas: 1
+  maxReplicas: 100
+  targetCPUUtilizationPercentage: 80
+  # targetMemoryUtilizationPercentage: 80
 
 nodeSelector: {}
 
