--- a/helmfile.yaml
+++ b/helmfile.yaml
@@ -1,6 +1,8 @@
 repositories:
   - name: stable
     url: https://charts.helm.sh/stable
+  - name: prometheus-community
+    url: https://prometheus-community.github.io/helm-charts
 releases:
   - name: nginx-ingress
     namespace: nginx
@@ -15,6 +17,11 @@ releases:
         value: 30080
       - name: controller.service.nodePorts.https
         value: 30443
+  - name: prometheus-operator
+    namespace: prometheus
+    chart: prometheus-community/kube-prometheus-stack
+    createNamespace: true
+    disableValidation: true
   - name: topokube
     namespace: topokube
     chart: ./charts/koozie-exporter
