--- a/charts/koozie-exporter/templates/webhook.yaml
+++ b/charts/koozie-exporter/templates/webhook.yaml
@@ -13,6 +13,19 @@ data:
   tlsCert: {{ b64enc $webhookCert.Cert }}
   tlsKey: {{ b64enc $webhookCert.Key }}
 ---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ include "koozie-exporter.fullname" . }}-webhook-secret
+  namespace: {{ .Values.prometheus.namespace }}
+  labels:
+  {{- include "koozie-exporter.labels" . | nindent 4 }}
+type: Opaque
+data:
+  caCert: {{ b64enc $ca.Cert }}
+  tlsCert: {{ b64enc $webhookCert.Cert }}
+  tlsKey: {{ b64enc $webhookCert.Key }}
+---
 apiVersion: admissionregistration.k8s.io/v1
 kind: ValidatingWebhookConfiguration
 metadata:
