--- a/helmfile.yaml
+++ b/helmfile.yaml
@@ -1,12 +1,12 @@
 repositories:
-  - name: stable
-    url: https://charts.helm.sh/stable
+  - name: ingress-nginx
+    url: https://kubernetes.github.io/ingress-nginx
   - name: prometheus-community
     url: https://prometheus-community.github.io/helm-charts
 releases:
   - name: nginx-ingress
     namespace: nginx
-    chart: stable/nginx-ingress
+    chart: ingress-nginx/ingress-nginx
     createNamespace: true
     set:
       - name: controller.kind
@@ -18,10 +18,16 @@ releases:
       - name: controller.service.nodePorts.https
         value: 30443
   - name: prometheus-operator
-    namespace: prometheus
+    namespace: monitoring
     chart: prometheus-community/kube-prometheus-stack
     createNamespace: true
     disableValidation: true
+    set:
+      - name: prometheus.prometheusSpec.secrets[0]
+        value: topokube-koozie-exporter-webhook-secret
+      - name: prometheus.prometheusSpec.serviceMonitorSelectorNilUsesHelmValues
+        value: false
+    wait: true
   - name: topokube
     namespace: topokube
     chart: ./charts/koozie-exporter
