chore: overhaul dockerfile and pipeline to fix errors and improve feedback

--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:14-alpine3.14 as builder
+FROM node:lts-bullseye-slim as builder
 
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
@@ -6,13 +6,8 @@ ENV CI=true
 
 COPY . .
 
-RUN apk update && apk --no-cache --virtual build-dependencies add \
-    python3=3.9.5-r2 \
-    make=4.3-r0 \
-    g++=10.3.1_git20210424-r2 \
-    && npm ci --no-optional --no-cache \
-    && npm run build \
-    && apk del build-dependencies
+RUN npm ci --omit=optional --legacy-peer-deps \
+    && npm run build
 
 #######################################
 
