--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,14 +7,46 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
-    name: build
+  verify-backend:
+    name: Verify Backend
     runs-on: ubuntu-latest
     steps:
       - name: checkout
         uses: actions/checkout@v2
       - name: go lint
         uses: golangci/golangci-lint-action@v2
+      - name: verify
+        run: make verify
+  verify-backend-docker:
+    name: Verify Backend Docker
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@v2
+      - name: lint api dockerfile
+        uses: hadolint/hadolint-action@v1.6.0
+        with:
+          dockerfile: Dockerfile
+      - name: Build the Docker image
+        run: docker build . --file Dockerfile --tag koozie:${{ github.sha }}
+  verify-frontend-docker:
+    name: Verify Frontend Docker
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@v2
+      - name: lint ui dockerfile
+        uses: hadolint/hadolint-action@v1.6.0
+        with:
+          dockerfile: ui/Dockerfile
+      - name: Build the Docker image
+        run: docker build ui --file ui/Dockerfile --tag koozie-ui:${{ github.sha }}
+  verify-helm-charts:
+    name: Verify Helm Charts
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@v2
       - name: Set up Helm
         uses: azure/setup-helm@v1
         with:
@@ -25,18 +57,6 @@ jobs:
           python-version: 3.7
       - name: Set up chart-testing (for Helm)
         uses: helm/chart-testing-action@v2.1.0
-      - name: lint api dockerfile
-        uses: hadolint/hadolint-action@v1.6.0
-        with:
-          dockerfile: Dockerfile
-      - name: lint ui dockerfile
-        uses: hadolint/hadolint-action@v1.6.0
-        with:
-          dockerfile: ui/Dockerfile
-      - name: verify
-        run: make verify
-      - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag koozie:${{ github.sha }}
       - name: lint helm chart
         run: |
           cd ./charts/koozie-exporter
