--- a/ui/package.json
+++ b/ui/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "next start",
-    "build": "next build && next export"
+    "build": "NODE_OPTIONS=--openssl-legacy-provider next build && next export"
   },
   "author": "zach pratt <zach@modzed.io>",
   "license": "MIT",
