--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,6 +19,8 @@ jobs:
           go-version: 1.17
       - name: Lint
         uses: golangci/golangci-lint-action@v3
+        with:
+          version: v1.50
       - name: Unit Test
         run: go test -v -count=1 -cover ./...
   verify-backend-docker:
