--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,6 +17,8 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.17
+      - name: Build
+        run: go build -v .
       - name: Lint
         uses: golangci/golangci-lint-action@v3
         with:
