--- a/ui/nginx.conf
+++ b/ui/nginx.conf
@@ -2,8 +2,8 @@ server {
     listen 80;
     listen 443 ssl;
     server_name _;
-    ssl_certificate /certificates/tlsCert;
-    ssl_certificate_key /certificates/tlsKey;
+    ssl_certificate /certificates/tls.crt;
+    ssl_certificate_key /certificates/tls.key;
 
     root /var/www/ui/;
     include /etc/nginx/mime.types;
