fix: attempt to make the koozie-exporter wait on the nginx ingress controller to finigh starting

--- a/charts/koozie-exporter/templates/deployment.yaml
+++ b/charts/koozie-exporter/templates/deployment.yaml
@@ -8,6 +8,10 @@ spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
   {{- end }}
+  strategy:
+    rollingUpdate:
+      maxUnavailable: 0
+      maxSurge: 1
   selector:
     matchLabels:
       {{- include "koozie-exporter.selectorLabels" . | nindent 6 }}
