--- a/charts/koozie-exporter/templates/deployment.yaml
+++ b/charts/koozie-exporter/templates/deployment.yaml
@@ -8,16 +8,20 @@ spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
   {{- end }}
+  strategy:
+    rollingUpdate:
+      maxUnavailable: 0
+      maxSurge: 1
   selector:
     matchLabels:
       {{- include "koozie-exporter.selectorLabels" . | nindent 6 }}
   template:
     metadata:
-      {{- with .Values.podAnnotations }}
       annotations:
         checksum/webhook: {{ include (print $.Template.BasePath "/webhook.yaml") . | sha256sum }}
+        {{- with .Values.podAnnotations }}
         {{- toYaml . | nindent 8 }}
-      {{- end }}
+        {{- end }}
       labels:
         {{- include "koozie-exporter.selectorLabels" . | nindent 8 }}
     spec:
