--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -7,6 +7,7 @@ ENV CI=true
 COPY . .
 
 RUN npm ci --omit=optional --legacy-peer-deps \
+    && npm test \
     && npm run build
 
 #######################################
