--- a/ui/package.json
+++ b/ui/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "next start",
-    "build": "NODE_OPTIONS=--openssl-legacy-provider next build && next export"
+    "build": "NODE_OPTIONS=--openssl-legacy-provider next build && next export",
+    "test": "jest"
   },
   "author": "zach pratt <zach@modzed.io>",
   "license": "MIT",
@@ -17,5 +18,12 @@
     "react-redux": "8.0.5",
     "redux": "4.2.1",
     "redux-thunk": "2.4.1"
+  },
+  "devDependencies": {
+    "@jest/globals": "29.4.1",
+    "@testing-library/react": "13.4.0",
+    "chance": "1.1.9",
+    "jest": "29.4.1",
+    "jest-environment-jsdom": "29.4.1"
   }
 }
