--- a/ui/package.json
+++ b/ui/package.json
@@ -4,8 +4,9 @@
   "description": "the ui of topokube",
   "main": "index.js",
   "scripts": {
-    "start": "next start",
     "build": "NODE_OPTIONS=--openssl-legacy-provider next build && next export",
+    "lint": "next lint",
+    "start": "next start",
     "test": "jest"
   },
   "author": "zach pratt <zach@modzed.io>",
@@ -23,6 +24,8 @@
     "@jest/globals": "29.4.1",
     "@testing-library/react": "13.4.0",
     "chance": "1.1.9",
+    "eslint": "8.33.0",
+    "eslint-config-next": "13.1.6",
     "jest": "29.4.1",
     "jest-environment-jsdom": "29.4.1"
   }
