--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -8,6 +8,7 @@ COPY . .
 
 RUN npm ci --omit=optional --legacy-peer-deps \
     && npm test \
+    && npm run lint \
     && npm run build
 
 #######################################
